@@ -1914,7 +1914,7 @@ else {
 					<script type="text/javascript">
 						/* Resource 1 Option Control */
 						$(document).ready(function(){
-							if ($('input[name=payment]:checked').val()=="Family" ) {
+							if ($('input[name=invoiceTo]:checked').val()=="Family" ) {
 								$("#companyNameRow").css("display","none");
 								$("#companyContactRow").css("display","none");
 								$("#companyAddressRow").css("display","none");
@@ -1923,13 +1923,17 @@ else {
 								$("#companyPhoneRow").css("display","none");
 								$("#companyAllRow").css("display","none");
 								$("#companyCategoriesRow").css("display","none");
+								companyEmail.disable() ;
+								companyAddress.disable() ;
+								companyContact.disable() ;
+								companyName.disable() ;
 							}
 							else {
 								if ($('input[name=companyAll]:checked').val()=="Y" ) {
 									$("#companyCategoriesRow").css("display","none");
 								}
 							}
-							
+					
 							$(".payment").click(function(){
 								if ($('input[name=payment]:checked').val()=="Family" ) {
 									$("#companyNameRow").css("display","none");
@@ -1940,6 +1944,10 @@ else {
 									$("#companyPhoneRow").css("display","none");
 									$("#companyAllRow").css("display","none");
 									$("#companyCategoriesRow").css("display","none");
+									companyEmail.disable() ;
+									companyAddress.disable() ;
+									companyContact.disable() ;
+									companyName.disable() ;
 								} else {
 									$("#companyNameRow").slideDown("fast", $("#companyNameRow").css("display","table-row")); 
 									$("#companyContactRow").slideDown("fast", $("#companyContactRow").css("display","table-row")); 
@@ -1953,9 +1961,13 @@ else {
 									} else {
 										$("#companyCategoriesRow").slideDown("fast", $("#companyCategoriesRow").css("display","table-row")); 
 									}
+									companyEmail.enable() ;
+									companyAddress.enable() ;
+									companyContact.enable() ;
+									companyName.enable() ;
 								}
 							 });
-							 
+					 
 							 $(".companyAll").click(function(){
 								if ($('input[name=companyAll]:checked').val()=="Y" ) {
 									$("#companyCategoriesRow").css("display","none");
@@ -1985,6 +1997,10 @@ else {
 						</td>
 						<td class="right">
 							<input name="companyName" id="companyName" maxlength=100 value="<?php print $row["companyName"] ?>" type="text" style="width: 300px">
+							<script type="text/javascript">
+								var companyName=new LiveValidation('companyName');
+								companyName.add(Validate.Presence);
+							</script>
 						</td>
 					</tr>
 					<tr id="companyContactRow">
@@ -1993,6 +2009,10 @@ else {
 						</td>
 						<td class="right">
 							<input name="companyContact" id="companyContact" maxlength=100 value="<?php print $row["companyContact"] ?>" type="text" style="width: 300px">
+							<script type="text/javascript">
+								var companyContact=new LiveValidation('companyContact');
+								companyContact.add(Validate.Presence);
+							</script>
 						</td>
 					</tr>
 					<tr id="companyAddressRow">
@@ -2001,6 +2021,10 @@ else {
 						</td>
 						<td class="right">
 							<input name="companyAddress" id="companyAddress" maxlength=255 value="<?php print $row["companyAddress"] ?>" type="text" style="width: 300px">
+							<script type="text/javascript">
+								var companyAddress=new LiveValidation('companyAddress');
+								companyAddress.add(Validate.Presence);
+							</script>
 						</td>
 					</tr>
 					<tr id="companyEmailRow">
@@ -2011,6 +2035,7 @@ else {
 							<input name="companyEmail" id="companyEmail" maxlength=255 value="<?php print $row["companyEmail"] ?>" type="text" style="width: 300px">
 							<script type="text/javascript">
 								var companyEmail=new LiveValidation('companyEmail');
+								companyEmail.add(Validate.Presence);
 								companyEmail.add(Validate.Email);
 							</script>
 						</td>
